# CSC3060Project1

./: CMakeLists.txt  README.md
src/: data_lab.cpp
test/: test_mystery_minus_one.cpp  test_power_of_2.cpp
